Change of colours and fonts

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,11 +29,13 @@ body {
   align-content: center;
 }
 .navbar-homepage .nav-logo p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  font-family: "Playwrite GB S", cursive;
+  font-optical-sizing: auto;
+  font-weight: 800;
   font-style: normal;
   font-size: 1rem;
   color: #30415D;
+  margin: 0;
 }
 
 .nav {
@@ -43,7 +45,7 @@ body {
   font-style: normal;
 }
 .nav p {
-  padding: 8px;
+  padding: 5px;
 }
 .nav * {
   padding: 0 1rem;
@@ -70,8 +72,10 @@ body {
 .about-me img {
   height: 500px;
   width: 500px;
-  padding: 50px;
   border-radius: 50%;
+  -webkit-box-shadow: 0px 0px 54px 33px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 0px 54px 33px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 54px 33px rgba(0, 0, 0, 0.2);
 }
 .about-me .about-me-descrip {
   padding: 50px;
@@ -85,8 +89,9 @@ body {
   margin: 2px;
 }
 .about-me .main-name {
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  font-family: "Playwrite GB S", cursive;
+  font-optical-sizing: auto;
+  font-weight: 800;
   font-style: normal;
   font-size: 4rem;
   color: #cf6766;
@@ -100,26 +105,55 @@ body {
   font-size: 1.5rem;
   color: #3C3C3C;
 }
-.about-me .more-about-me {
-  font-size: 1rem;
-  padding-left: 1rem;
+
+#aboutme-header-text {
+  text-align: start;
+  padding: 1rem 0;
+  padding-left: 3rem;
+  font-family: "Playwrite GB S", cursive;
+  font-optical-sizing: auto;
+  font-weight: 1000;
+  font-style: normal;
+  font-size: 2.5rem;
+  color: whitesmoke;
+  background-color: #6C648B;
+  margin: 0;
+  padding-top: 3rem;
 }
-.about-me .more-about-me:hover {
-  font-weight: 700;
-  color: #CD8B76;
-  cursor: pointer;
+
+.description-aboutme {
+  background-color: #6C648B;
+  padding-bottom: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-areas: "img1 descript img2";
+}
+.description-aboutme #text-aboutme {
+  grid-area: descript;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  text-align: justify;
+  font-size: 3.5rem;
+}
+.description-aboutme #text-aboutme #special {
+  background-color: #CD8B76;
+  font-style: oblique;
+  font-weight: 800;
 }
 
 #hobbies-header-text {
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  text-align: start;
+  padding: 1rem 0;
+  padding-left: 3rem;
+  font-family: "Playwrite GB S", cursive;
+  font-optical-sizing: auto;
+  font-weight: 1000;
   font-style: normal;
-  font-size: 2rem;
-  color: #30415D;
+  font-size: 2.5rem;
+  color: whitesmoke;
   background-color: #93A8AC;
   margin: 0;
-  padding: 1rem 0;
 }
 
 .hobbies {
@@ -407,15 +441,18 @@ body {
 }
 
 #studies-projects-header-text {
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  text-align: start;
+  padding: 1rem 0;
+  padding-left: 3rem;
+  font-family: "Playwrite GB S", cursive;
+  font-optical-sizing: auto;
+  font-weight: 1000;
   font-style: normal;
-  font-size: 2rem;
-  color: #30415D;
+  font-size: 2.5rem;
+  color: whitesmoke;
   background-color: #945D60;
   margin: 0;
-  padding: 1rem 0;
+  padding-top: 3rem;
 }
 
 .studies-projects {
@@ -424,7 +461,7 @@ body {
   grid-template-areas: "studies projects";
   color: #93A8AC;
   background-color: #945D60;
-  padding: 3rem auto;
+  padding-bottom: 5rem;
 }
 .studies-projects .studies {
   grid-area: studies;
@@ -703,20 +740,24 @@ body {
 }
 
 .contact {
-  display: block;
-  text-align: center;
-  padding: 10px 0 20px 0;
-  border-top: solid 2px #DBFF76;
-  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0 10px 3rem;
+  background-color: #945D60;
+  -webkit-box-shadow: 0px -10px 16px -6px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px -10px 16px -6px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px -10px 16px -6px rgba(0, 0, 0, 0.2);
 }
 .contact h5 {
   display: inline-block;
   margin: 1rem 0;
-  font-family: "Poppins", sans-serif;
-  font-weight: 700;
+  font-family: "Playwrite GB S", cursive;
+  font-optical-sizing: auto;
+  font-weight: 1000;
   font-style: normal;
-  font-size: 1rem;
-  color: #DBFF76;
+  font-size: 1.5rem;
+  color: whitesmoke;
 }
 .contact img {
   height: 2rem;
