--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -89,9 +89,9 @@ body{
         width: 500px;
         // padding: 50px;
         border-radius: 50%;
-        -webkit-box-shadow: 0px 0px 54px 33px rgba(0,0,0,0.2);
-        -moz-box-shadow: 0px 0px 54px 33px rgba(0,0,0,0.2);
-        box-shadow: 0px 0px 54px 33px rgba(0,0,0,0.2);
+        -webkit-box-shadow: 0px 0px 54px 10px rgba(0,0,0,0.2);
+        -moz-box-shadow: 0px 0px 54px 10px rgba(0,0,0,0.2);
+        box-shadow: 0px 0px 54px 10px rgba(0,0,0,0.2);
     }
 
     .about-me-descrip {
@@ -102,7 +102,7 @@ body{
         font-family: "Poppins", sans-serif;
         font-weight: 700;
         font-style: normal;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: #30415D;
         margin: 2px;
     }
@@ -153,6 +153,20 @@ body{
     grid-template-areas: 
         "img1 descript img2";
 
+    #nature-icon {
+        grid-area: img1;
+        max-height: 12rem;
+        padding: 3rem;
+        padding-top: 15rem;
+    }
+
+    #beach-icon {
+        grid-area: img2;
+        max-width: 12rem;
+        padding: 3rem;
+        padding-top: 10rem;
+    }
+
     #text-aboutme {
         grid-area: descript;
         font-family: "Lato", sans-serif;
@@ -177,7 +191,7 @@ body{
 
 #hobbies-header-text {
     text-align: start;
-    padding: 1rem 0;
+    padding: 3rem 0;
     padding-left: 3rem;
     font-family: "Playwrite GB S", cursive;
     font-optical-sizing: auto;
