--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
 html {
     box-sizing: border-box;
-    background-color: whitesmoke;
+    scroll-behavior: smooth;
 }
 
 body{
@@ -51,6 +51,10 @@ body{
         font-family: "Poppins", sans-serif;
         font-weight: 500;
         font-style: normal;
+
+        a {
+            text-decoration: none;
+        }
 
         p {
             padding: 5px;
@@ -645,6 +649,10 @@ body{
     background-color: #945D60;
     padding-bottom: 5rem;
 
+    p {
+        color: #3C3C3C;
+    }
+
     .studies {
         grid-area: studies;
         display: flex;
@@ -655,7 +663,7 @@ body{
         font-family: "Lato", sans-serif;
 
         h3 {
-            color: #CD8B76;
+            color: #30415D;
         }
         
         // Aqui se da estilo al estudio de web development
@@ -828,7 +836,7 @@ body{
         font-family: "Lato", sans-serif;
 
         h3 {
-            color: #CD8B76;
+            color: #30415D;
         }
         
         // Aqui se da estilo al proyecto de payment
