--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -21,8 +21,8 @@ body{
     -moz-box-shadow: 0px 10px 16px -6px rgba(48,65,93,0.2);
     box-shadow: 0px 10px 16px -6px rgba(48,65,93,0.2);
     z-index: 100;
+ 
 
-        
         // Imagen
         .nav-logo {
             height: auto;
@@ -84,13 +84,15 @@ body{
     align-items: center;
     background-color: #DCD0C0;
     color: #93A8AC;
-    height: 100vh;
-    max-width: 200vh;
-    min-width: 100vh;
+    height: 50rem;
+    width: 100vw;
+
     
     img {
-        height: 500px;
-        width: 500px;
+        max-height: 30rem;
+        max-width: 30rem;
+        min-height: 5rem;
+        min-width: 5rem;
         // padding: 50px;
         border-radius: 50%;
         -webkit-box-shadow: 0px 0px 54px 10px rgba(0,0,0,0.2);
@@ -261,7 +263,7 @@ body{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    height: 100vh;
+    height: 100vw;
     background-color: #93A8AC;
 
     // Esto es para la imagen 1 "Music"
@@ -1052,5 +1054,57 @@ body{
         }
 }
 
+@media screen and (max-width: 600px) {
+    
+    .navbar-homepage {
+        display: flex;
+        align-items: center;
+        justify-self: center;
+        width: 100vw;
 
+    }
+
+    .nav {
+        align-items: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    .about-me {
+        padding-top: 2rem;
+        flex-direction: column;
+
+        img {
+            height: 13rem;
+            width: 13rem;
+        }
+    }
+
+    .description-aboutme {
+
+        
+
+        img {
+            visibility: hidden;
+        }
+
+        #text-aboutme {
+            font-size: 2rem;
+        }
+    }
+
+    .hobbies {
+        padding-bottom: 45rem;
+
+        
+    }
+
+    .studies-projects {
+
+        .studies {
+          padding: 2rem;  
+        }
+        
+    }
+}
 
