--- a/src/css/index.css
+++ b/src/css/index.css
@@ -76,6 +76,7 @@ body {
   max-width: 30rem;
   min-height: 5rem;
   min-width: 5rem;
+  margin-left: 3rem;
   border-radius: 50%;
   -webkit-box-shadow: 0px 0px 54px 10px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 54px 10px rgba(0, 0, 0, 0.2);
@@ -219,8 +220,10 @@ body {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  height: 100vw;
+  height: 100vh;
+  max-width: 200vh;
   background-color: #93A8AC;
+  box-sizing: border-box;
 }
 .hobbies .music {
   display: flex;
@@ -838,6 +841,7 @@ body {
     align-items: center;
     padding: 0;
     margin: 0;
+    visibility: hidden;
   }
   .about-me {
     padding-top: 2rem;
