--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -93,7 +93,7 @@ body{
         max-width: 30rem;
         min-height: 5rem;
         min-width: 5rem;
-        // padding: 50px;
+        margin-left: 3rem;
         border-radius: 50%;
         -webkit-box-shadow: 0px 0px 54px 10px rgba(0,0,0,0.2);
         -moz-box-shadow: 0px 0px 54px 10px rgba(0,0,0,0.2);
@@ -263,8 +263,10 @@ body{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    height: 100vw;
+    height: 100vh;
+    max-width: 200vh;
     background-color: #93A8AC;
+    box-sizing: border-box;
 
     // Esto es para la imagen 1 "Music"
     .music {
@@ -1068,11 +1070,13 @@ body{
         align-items: center;
         padding: 0;
         margin: 0;
+        visibility: hidden;
     }
 
     .about-me {
         padding-top: 2rem;
         flex-direction: column;
+
 
         img {
             height: 13rem;
